--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             transportadoras.</p>
         </div>
       </div>
-      <img id="elemento2" class="escondido derecha" src="/imgs/Cautivo1.png" alt="">
+      <img id="elemento2" class="escondido derecha" src="imgs/Cautivo1.png" alt="">
     </div><br><br><br>
 
     <div class="container flex-container">
