--- a/servicios.html
+++ b/servicios.html
@@ -89,7 +89,7 @@
     <div id="carouselExampleCaptions" class=" ">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/imgs/car_servicio.png" class="portada d-block w-100" alt="...">
+          <img src="imgs/car_servicio.png" class="portada d-block w-100" alt="...">
           <div class="fadeInUp carousel-caption d-none d-md-block">
             <h5>Nuestros servicios</h5>
           </div>
